
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct dccp_handle {int dummy; } ;


 int dccp_connect_pad (struct dccp_handle*,int ) ;
 int port ;

void dccp_kmalloc_pad() {
 int i;
 struct dccp_handle handle;
 for (i = 0; i < 4; i++) {
  dccp_connect_pad(&handle, port++);
 }
}
