; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_41458.c_dccp_kmalloc_pad.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_41458.c_dccp_kmalloc_pad.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dccp_handle = type { i32 }

@port = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dccp_kmalloc_pad() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.dccp_handle, align 4
  store i32 0, i32* %1, align 4
  br label %3

3:                                                ; preds = %10, %0
  %4 = load i32, i32* %1, align 4
  %5 = icmp slt i32 %4, 4
  br i1 %5, label %6, label %13

6:                                                ; preds = %3
  %7 = load i32, i32* @port, align 4
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* @port, align 4
  %9 = call i32 @dccp_connect_pad(%struct.dccp_handle* %2, i32 %7)
  br label %10

10:                                               ; preds = %6
  %11 = load i32, i32* %1, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* %1, align 4
  br label %3

13:                                               ; preds = %3
  ret void
}

declare dso_local i32 @dccp_connect_pad(%struct.dccp_handle*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
